<resources>
    <string name="app_name">彩虹卡</string>
    <string name="search_input">输入相关地理位置</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="network_error">网络异常,请重新设置网络</string>
    <string name="no_data">暂无数据信息</string>
    <string name="agreement">请同意用户协议</string>
    <string name="loading_retry">点击刷新</string>
    <string name="again">重 新 加 载</string>
    <string name="map">地图</string>
    <string name="list">列表</string>
    <string name="time_next">Next</string>
    <string name="time_prev">Previous</string>
    <string name="get_rainbow">领取彩虹卡</string>
    <string name="setting">设置</string>
    <string name="user_setting">用户设置</string>
    <string name="change_password">修改密码</string>
    <string name="find_password">找回密码</string>
    <string name="change_phone">更换手机号</string>
    <string name="user_login">登录</string>
    <string name="regist">用户注册</string>
    <string name="select_city">选择城市</string>
    <string name="bind_card">绑定彩虹卡</string>
    <string name="authentication">实名认证</string>
    <string name="modification_bank">修改银行卡</string>
    <string name="free_wash_ticket">免费洗车券</string>
    <string name="free_wash_trial">免费洗车试算</string>
    <string name="free_wash_ticket_entrance">彩虹卡免费洗车</string>
    <string name="purchase_record">参与记录</string>
    <string name="free_wash_detail">免费洗车券明细</string>
    <string name="invite">邀请有礼</string>
    <string name="capital_detail">资金明细</string>
    <string name="cash_text">退款</string>
    <string name="faq_text">常见问题</string>
    <string name="bank_transfer">银行汇款</string>
    <string name="remittance_info">提交汇款信息</string>
    <string name="dollty_text">小车:%1$s元 或 %2$s次</string>
    <string name="dolly_money">¥%1$s</string>
    <string name="dolly_price">小车¥%1$s</string>
    <string name="balance_text">%1$s元</string>
    <string name="balance_count">%1$s次</string>
    <string name="discount_date">%1$s—%2$s</string>
    <string name="discount_valid">有效期至：%1$s</string>
    <string name="cart_text">大车:%1$s元 或 %2$s次</string>
    <string name="cart_money">大车¥%1$s</string>
    <string name="hint_text">请到店凭数字码(%1$s)消费</string>
    <string name="hint_text2">%1$s张免费洗车券已发放\n到您的账户，可在个人中心—免费洗车券中查看</string>
    <string name="price">¥%1$s</string>
    <string name="activity_price">新用户洗车首单%1$s</string>
    <string name="price_count">¥%1$s (或%2$s次)</string>
    <string name="cash">现金价%1$s</string>
    <string name="addr_text">地址:%1$s</string>
    <string name="phone_text">电话:%1$s</string>
    <string name="exchange_data">兑换时间:%1$s</string>
    <string name="rainbow_card_recharge">彩虹卡充值</string>
    <string name="account_recharge">余额充值</string>
    <string name="recharge_result">支付结果</string>
    <string name="withdraw_result">退款结果</string>
    <string name="exchange_result">兑换成功</string>
    <string name="query_rainbow">彩虹卡查询</string>
    <string name="integral_shop">积分商城</string>
    <string name="pay">确认订单</string>
    <string name="add_consignee_address">新增收货地址</string>
    <string name="edit_consignee_address">修改收货地址</string>
    <string name="select_consignee_address">选择配送地址</string>
    <string name="manage_address">地址管理</string>
    <string name="integral_exchange_title">积分兑换</string>
    <string name="find_psw">找回密码</string>
    <string name="my_attention">我的关注</string>
    <string name="task_center">任务中心</string>
    <string name="share_gift">分享有礼</string>
    <string name="my_message">我的消息</string>
    <string name="attestation_name">实名认证</string>
    <string name="my_agreement">用户协议</string>
    <string name="feedback">问题反馈</string>
    <string name="about">关于彩虹卡</string>
    <string name="all_classify">全部分类</string>
    <string name="check_illegal">违章查询</string>
    <string name="illegal_result">查询结果</string>
    <string name="recharge_record">充值记录</string>
    <string name="help">帮助中心</string>
    <string name="my_order">我的订单</string>
    <string name="my_wallet">我的钱包</string>
    <string name="my_collect">我的收藏</string>
    <string name="recharge_order">领卡订单</string>
    <string name="integral_rele">积分规则</string>
    <string name="my_discount">优惠券</string>
    <string name="message_centre">消息中心</string>
    <string name="message_detail">消息详情</string>
    <string name="usable_discount">可用优惠券</string>
    <string name="order_comment">订单评价</string>
    <string name="order_pay">订单支付</string>
    <string name="order_succeed">购买成功</string>
    <string name="shop_comment">评论</string>
    <string name="my_card">我的卡片</string>
    <string name="sign">每日签到</string>
    <string name="exchage">积分兑换</string>
    <string name="exchage_record">兑换记录</string>
    <string name="exchage_detail">兑换详情</string>
    <string name="order_detail">订单详情</string>
    <string name="attestation_succeed">认证成功</string>
    <string name="attestation_null">未认证</string>
    <string name="attestation_name_null">认证姓名为空</string>
    <string name="attestation_name_illegal">认证姓名不合法</string>
    <string name="attestation_idcard_null">认证身份证为空</string>
    <string name="attestation_idcard_illegal">认证身份证不合法</string>
    <string name="card_null">卡号为空</string>
    <string name="name_null">姓名为空</string>
    <string name="name_illegal">姓名不合法</string>
    <string name="number_null">手机为空</string>
    <string name="number_illegal">手机不合法</string>
    <string name="select_card">请选择充值卡片</string>
    <string name="plate_null">车牌号码为空</string>
    <string name="engine_null">发动机号码为空</string>
    <string name="heading_code_null">车架号码为空</string>
    <string name="recharge_error">充值金额不能小于50</string>
    <string name="recharge_error1">购买金额不能小于100</string>
    <string name="recharge_error2">充值金额应为100的倍数</string>
    <string name="address_null">详细地址为空</string>
    <string name="city_null">省市区为空</string>
    <string name="offline">线下领取</string>
    <string name="online">线上领取</string>
    <string name="delete">删除</string>
    <string name="follow_success">关注成功</string>
    <string name="follow_cancel">取消关注</string>
    <string name="follow_fail">关注失败</string>
    <string name="add_success">添加成功</string>
    <string name="set_default_success">添加默认成功</string>
    <string name="delete_success">删除成功</string>
    <string name="nick_name_include_special_characters">姓名不能含有数字或特殊字符</string>
    <string name="action_settings">Settings</string>
    <string name="customer_service">客服QQ：2682058226</string>
    <string name="search_shop">搜索商户名称</string>
    <string name="hint_discount">输入优惠券兑换码</string>
    <string name="search_addr">搜索相关地理位置</string>
    <string name="give_money">赠送：%1$s元</string>
    <string name="give_points">再赠%1$s彩虹币</string>
    <string name="pay_give_points">%1$s彩虹币,再赠%2$s彩虹币</string>
    <string name="pay_points">%1$s元</string>
    <string name="point">%1$s分</string>
    <string name="unit_points">请输入充值金额</string>
    <string name="unit_points2">请输入充值金额,需是100的倍数</string>
    <string name="sign_count">今日已有%1$s人签到</string>
    <string name="sign_text2">小主，您已连续签到%1$s天，继续加油哦！</string>
    <string name="sign_text1">小主，连续签到可赚取更多积分哟！</string>
    <string name="versions">当前版本 %1$s</string>
    <string name="recharge_price">%1$s元</string>
    <string name="sub_price">-¥%1$s</string>
    <string name="sub_break">%1$s折</string>
    <string name="area">%1$s,%2$s,%3$s</string>
    <string name="url">%1$s%2$s</string>
    <string name="discount_count">%1$s张</string>
    <string name="gain_count">获得%1$s张</string>
    <string name="add_count">+%1$s张</string>
    <string name="add_money">+%1$s元</string>
    <string name="reduce_count">-%1$s张</string>
    <string name="reduce_money">-%1$s元</string>
    <string name="coupon_used">已使用（%1$s）</string>
    <string name="coupon_un_used">未使用（%1$s）</string>
    <string name="coupon_expire">已失效（%1$s）</string>
    <string name="events_news">活动消息（%1$s）</string>
    <string name="system_message">系统通知（%1$s）</string>
    <string name="service_text">%1$s(%2$s)</string>
    <string name="usable">满%1$s可用</string>
    <string name="usable_integral">可用积分%1$s</string>
    <string name="integral">%1$s积分</string>
    <string name="little_integral">您还需要%1$s积分才能兑换该商品</string>
    <string name="integral_exchange">确定使用%1$s积分兑换？</string>
    <string name="hint_engine_all">请输入全部发动机号码</string>
    <string name="hint_engine_part">请输入发动机号码后%1$s位</string>
    <string name="hint_heading_all">请输入全部车辆识别号码</string>
    <string name="hint_heading_part">请输入车辆识别后%1$s位</string>
    <string name="recharge_agreement">点击立即充值，即表示您已经同意《充值协议》</string>
    <string name="illegal_info">您在%1$s市共有%2$s次违章，共扣%3$s分 罚款%4$s元</string>
    <string name="succeed_info">您在%1$s市暂时没有违章记录</string>
    <string name="token">Bearer {%1$s}</string>
    <string name="service_type">%1$s(%2$s)</string>
    <string name="comment">评价%1$s</string>
    <string name="order">%1$s单</string>
    <string name="distance">%1$skm</string>
    <string name="img_url">http://%1$s</string>
    <string name="check_url">http://testwww.caihongka.com/wz/#/%1$s/index/</string>
    <string name="rainbow_no">彩虹卡 %1$s</string>
    <string name="rainbow_number">彩虹卡 %1$s</string>
    <string name="regulations">哎呦卧槽! 我违章被罚了%1$s块，你呢?</string>
    <string name="no_regulations">哎呀真棒! 我暂时还没有违章，你呢?</string>
    <string name="regulations_content">快来看! 我在北京市的违章数据。你们也来试试吧</string>
    <string name="city_json">{"cityId":"%1$s"}</string>
    <string name="period_text">%1$s天</string>
    <string name="period_text2">期限：%1$s天</string>
    <string name="count_text">预计可获得%1$s张（等同于¥%2$s）免费洗车券</string>
    <string name="count_text1">免费洗车券：%1$s张</string>
    <string name="count_text2">%1$s张免费洗车券</string>
    <string name="sell_count">可出售%1$s张</string>
    <string name="give_text">已加送%1$s%%</string>
    <string name="rate_text">%1$s%%</string>
    <string name="size_text">%1$sM/%2$sM</string>
    <string name="order_text">订单号：%1$s</string>
    <string name="buy_text">参与金额：¥%1$s</string>
    <string name="expire_text">%1$s到期</string>
    <string name="extractable_text">可退%1$s元</string>
    <string name="cash_hint">账户可退余额不足以支付退款手续费¥%1$s，当前最大可退款金额为¥%2$s</string>
    <string name="headline">用户%1$s已获得%2$s张免费洗车券</string>
    <string name="invite_count">已成功邀请好友：%1$s人</string>
    <string name="tickect_count">累计获得%1$s张</string>
    <string-array name="weeks">
        <item>一</item>
        <item>二</item>
        <item>三</item>
        <item>四</item>
        <item>五</item>
        <item>六</item>
        <item>日</item>
    </string-array>
    <string name="title_act_select">选择城市</string>
    <string name="select_city_locating">正在定位当前城市</string>
    <string name="select_city_locating_position">正在定位当前位置</string>
    <string name="select_city_load_history">正在读取历史记录</string>
    <string name="select_city_load_hot">正在载入热门城市</string>
    <string name="select_city_load_all">正在读取城市列表</string>
    <string name="select_city_head_present">当前城市</string>
    <string name="present">当前</string>
    <string name="select_city_head_position">当前位置</string>
    <string name="select_city_head_history">历史选择</string>
    <string name="history">历史</string>
    <string name="select_city_head_hot">热门城市</string>
    <string name="hot">热门</string>
    <string name="select_city_head_other">其他</string>
    <string name="select_city_head_search">搜索结果</string>
    <string name="progressActivityErrorContentPlaceholder">网络不给力哦，加载失败</string>
    <string name="progressActivityErrorButton">重新加载</string>
    <string name="progressActivityEmptyTitlePlaceholder">未加载到任何内容!</string>
    <string name="progressActivityEmptyContentPlaceholder">We couldn\'t find anything. Tap the button to take your first image</string>
    <string name="car_num_string">车牌号</string>
    <string name="insurance_common_text">普通车险</string>
    <string name="insurance_common_newcar">我的车辆是新车</string>
    <string name="insurance_common_text1">安全 · 放心 · 省钱</string>
    <string name="insurance_common_form_title">车辆基本信息</string>
    <string name="insurance_common_form_city">投保地区</string>
    <string name="insurance_choice_text">险种选择</string>
</resources>