<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <include
        android:id="@+id/head_layout"
        layout="@layout/head_panel_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/caihongka_icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insurance_common_text"
                android:textSize="18sp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insurance_common_text1"
                android:layout_marginTop="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/bg_edittext_comment"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textSize="18sp"
                    android:layout_marginTop="15dp"
                    android:text="@string/insurance_common_form_title"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:background="@drawable/bg_edittext_comment"
                    android:orientation="horizontal"
                    android:focusable="true"
                    android:focusableInTouchMode="true">

                    <ImageView
                        android:layout_width="@dimen/dp_m_y_17"
                        android:layout_height="@dimen/dp_m_y_17"
                        android:layout_marginLeft="@dimen/dp_m_y_10"
                        android:layout_marginRight="@dimen/dp_m_y_5"
                        android:src="@drawable/more"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/car_num_string"
                        android:textSize="@dimen/sp_17"
                        />

                    <LinearLayout
                        android:id="@+id/ac_spiner_car_city_container"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dp_m_x_25"
                        android:background="@drawable/bg_blue_border_white_btn_normal"
                        android:paddingLeft="@dimen/dp_m_y_10"
                        android:paddingRight="@dimen/dp_m_y_10"
                        android:layout_marginLeft="40dp"
                        android:layout_marginRight="15dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/ac_spiner_car_city"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:layout_centerVertical="true"
                            android:textColor="@color/app_gray"
                            android:text="京"/>

                        <ImageView
                            android:id="@+id/item_child_choice_arrow"
                            android:layout_width="13dp"
                            android:layout_height="15dp"
                            android:layout_marginLeft="5dp"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/arrow_down_insurance"/>

                    </LinearLayout>

                    <EditText
                        android:id="@+id/common_insurance_carnum_edittext"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        style="@style/bookticket_et_base"
                        android:background="@color/transparent"
                        android:paddingLeft="@dimen/dp_m_y_5"
                        android:paddingRight="@dimen/dp_m_y_5"
                        android:hint="输入车牌号"/>

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/insurance_common_insuracedcity_container"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center_vertical"
                    android:background="@drawable/bg_edittext_comment"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="17dp"
                        android:layout_height="17dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="5dp"
                        android:src="@drawable/more"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/insurance_common_form_city"
                        android:textSize="17sp"
                        />
                    <TextView
                        android:id="@+id/insurance_common_insuracedcity"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/sp_17"
                        android:layout_marginRight="10dp"
                        android:gravity="right"
                        android:text="北京"
                        />

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center">

                <android.support.v7.widget.AppCompatCheckBox
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:checked="true"
                    style="@style/CustomCheckboxTheme2"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_m_y_5"
                    android:textSize="10sp"
                    android:text="提交车险订单即视为您已同意"
                    />

                <TextView
                    android:id="@+id/ci_text_protocol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/cal_color_green"
                    android:textSize="10sp"
                    android:text="车险合作政策"/>
            </LinearLayout>
            <TextView
                android:id="@+id/ci_bt_next"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="@dimen/dp_m_y_10"
                android:layout_marginRight="@dimen/dp_m_y_10"
                android:text="@string/next"
                android:gravity="center"
                android:textSize="@dimen/sp_20"
                android:background="@drawable/selector_blue_btn"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"/>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/act_common_insurance_text_footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:text="@string/insurance_common_newcar"/>

</LinearLayout>